Uploaded image for project: 'ActiveMQ C++ Client'
  1. ActiveMQ C++ Client
  2. AMQCPP-25

Bus error on Solaris OS from DataInput and DataOutput streams

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 1.1
    • 1.1
    • CMS Impl
    • None
    • Solaris 10 OS

    Description

      Due to misaligned memory reads, there is a bus error that can occur in using the new DataInputStream and DataOutputStream classes.

      Attachments

        1. optobug.cpp
          3 kB
          Albert Strasheim

        Activity

          People

            tabish Timothy A. Bish
            tabish Timothy A. Bish
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: