http://issues.apache.org/activemq/browse/AMQCPP-25

git-svn-id: https://svn.apache.org/repos/asf/incubator/activemq/activemq-cpp/trunk/activemq-cpp@486913 13f79535-47bb-0310-9956-ffa450edef68